test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/libraries/internal_linkage_function.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[73]:
  static
  int
  identifier(my_fun)
  (
  void
  )
  ;
  int
  identifier(call_static_my_fun)
  (
  void
  )
  {
  return
  identifier(my_fun)
  (
  )
  ;
  }
  int
  identifier(call_static_my_fun_2)
  (
  void
  )
  {
  int
  identifier(my_fun)
  (
  void
  )
  ;
  return
  identifier(my_fun)
  (
  )
  ;
  }
  extern
  int
  identifier(my_fun)
  (
  void
  )
  ;
  static
  int
  identifier(my_fun)
  (
  void
  )
  ;
  int
  identifier(my_fun)
  (
  void
  )
  {
  static
  int
  identifier(i)
  =
  const int(0)
  ;
  identifier(i)
  =
  identifier(i)
  +
  const int(1)
  ;
  return
  identifier(i)
  ;
  }
