test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/static_param.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  int
  identifier(f)
  (
  static
  int
  identifier(i)
  )
  {
  return
  identifier(i)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(f)
  (
  const int(1)
  )
  ;
  }
